--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 </header>
 
 <main>
+    <h1>
+        This is a inicial page
+    </h1>
+
     <section>
         <h2>Sobre o Projeto</h2>
         <p>Este projeto tem como objetivo ensinar o fluxo de trabalho do GitHub, incluindo a criaÃ§Ã£o de branches, commits, Pull Requests e revisÃµes de cÃ³digo.</p>
