Adicionando um novo parágrafo na section da main

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <section>
         <h2>Sobre o Projeto</h2>
         <p>Este projeto tem como objetivo ensinar o fluxo de trabalho do GitHub, incluindo a criaÃ§Ã£o de branches, commits, Pull Requests e revisÃµes de cÃ³digo.</p>
+        <p><strong>Novo texto adicionado:</strong> Este é um exemplo prático de como contribuir para projetos open-source, aprendendo a colaborar e aprimorar habilidades de desenvolvimento.</p>
     </section>
 
     <section>
