--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 </header>
 
 <main>
-    <h1>
+    <h1 style="color: chocolate;">
         This is a inicial page
     </h1>
 
-    <h2>
+    <h2 style="color: chocolate;">
         This is Gragas, the best of League of Legends
     </h2>
     <img src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Gragas_4.jpg" alt="">
